# looplab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.jupyterhub  LICENSE  README.md  build.sh  conftest.py  docker-compose.yml  mkdocs.yml  pyproject.toml  task_mlebench_100.json  ui_preview.py  ui_with_env.py
.github/workflows/: docs.yml  tests.yml
autornd/: __init__.py  agent.py  archive.py  atomicio.py  cli.py  cli_agent.py  command_eval.py  config.py  confirm.py  cv.py  htmlview.py  leakage.py  llm.py  memory.py  mlebench.py  orchestrator.py  parse.py  patch.py  policy.py  readmodel.py  regression.py  repo_task.py  roles.py  sandbox.py  skills.py  tasks.py  traceview.py  tracing.py  vectorstore.py
docs/: 00-INDEX.md  01-product-design.md  02-architecture.md  03-decisions.md  04-file-layout.md  05-build-decisions.md  06-implementation-plan.md  07-architecture-review.md  08-tracing-architecture.md  10-autoresearch-improvement-research.md  11-agent-systems-research.md  12-phased-plan-2026-07.md  13-external-works-analysis-2026-07.md  14-agent-framework-mega-review-2026-07-10.md  15-mega-refactor-review-2026-07-10.md  16-architecture-code-review-2026-07-11.md  17-napmem-sciresearcher-exploration-kb-2026-07-11.md  17-project-review-and-directions-2026-07-11.md  18-desktop-concepts-ui-ux-review-2026-07-16.md  18-project-review-and-directions-2026-07-11.md  18-ui-ux-review-2026-07-11.md  19-ide-integration-and-remote-development-2026-07-12.md  20-looplab-unified-ds-workspace-and-distributed-execution-2026-07-12.md  21-full-functionality-review-2026-07-13.md  22-agent-parallelism-2026-07-19.md  23-hypothesis-card-kanban-2026-07-20.md  A7-strategist-design.md  BACKLOG.md  CODE_REVIEW.md  GRAPH_GROUPING_REDESIGN.md  MLEBENCH.md  PROMPT_REVIEW.md  RESEARCH_NOTES.md  ROADMAP.md  autoresearch-systems-exploration.md  chat-first-command-bar-research.md  index.md  requirements.txt
docs/guide/: architecture.md  cli-reference.md  concepts.md  configuration.md  deployment.md  generating-code.md  index.md  installation.md  live-scenarios.md  llm-and-agents.md  memory.md  quickstart.md  tasks.md  ui.md
docs/infographic/: agent-architecture.html
docs/stylesheets/: extra.css
examples/: classification_task.json  code_regression_task.json  dataset_task.json  mlebench_hostgraded_task.json  mlebench_real_insults.json  mlebench_real_spooky.json  mlebench_task.json  regression_task.json  repo_composable_task.json  repo_drift_task.json  repo_framework_task.json  repo_onboard_task.json  repo_stages_task.json  repo_task.json  speculation_gate_seed_0.json  speculation_gate_seed_1.json  speculation_gate_seed_2.json  timeseries_task.json  toy_task.json  toy_task_noisy.json  vec.json
examples/dataset_example/: data.csv
examples/knowledge/: continuous_optimization.md  polynomial_model_selection.md
examples/repo_example/: config.json  stage_score.py  stage_train.py  ttrain.py  ttrain_cli.py
examples/skills/: cross_validation.md
looplab/: __init__.py  _pathsafe.py  agent.py  agents_md.py  appconfig.py  archive.py  assistant.py  assistant_commands.py  atomicio.py  bench.py  best_of_n.py  bg_tasks.py  classification.py  cli.py  cli_agent.py  command_eval.py  config.py  context_budget.py  critic.py  curator.py  cv.py  dataset_task.py  deep_research.py  deps.py  digest.py  eventstore.py  gate.py  genesis.py  git_tools.py  hardware.py  hints.py  htmlview.py  jupyter.py  kaggle_dl.py  knowledge_tools.py  leakage.py  literature.py  llm.py  localize.py  mcp_tools.py  (+50 more)
looplab/adapters/: __init__.py  classification.py  dataset_task.py  kaggle_dl.py  mlebench.py  mlebench_grade.py  mlebench_prep.py  mlebench_real.py  regression.py  repo_developer.py  repo_task.py  repo_write_tools.py  tasks.py  timeseries.py  toytask.py
looplab/agents/: __init__.py  agent.py  cli_agent.py  deep_research.py  hints.py  roles.py  strategist.py  stuck.py  tool_loop.py  unified_agent.py
looplab/cli/: __init__.py  __main__.py  export_cmds.py  inspect_cmds.py  run_cmds.py  ui_cmds.py
looplab/core/: __init__.py  _pathsafe.py  advisory_payloads.py  appconfig.py  atomicio.py  comparison.py  concepts.py  config.py  context_budget.py  errors.py  fitness.py  gitenv.py  hardware.py  llm.py  llm_broker.py  llm_streaming.py  llm_toolcall.py  llm_transient.py  models.py  parse.py  prompts.py  task_kinds.py  tracing.py  validate.py
looplab/engine/: __init__.py  ablation.py  action_governance.py  asha_monitor.py  audit.py  claim_key.py  claim_steward.py  claims.py  concept_registry.py  concept_steward.py  confirm_phase.py  costs.py  crash_repair.py  cross_run_index.py  eval_dispatch.py  eval_stages.py  evaluate.py  finalize.py  genesis.py  governance_health.py  holdout.py  lessons.py  lessons_distill.py  lessons_priors.py  lessons_reconcile.py  memory.py  node_build.py  novelty.py  options.py  orchestrator.py  proposal_cues.py  (+10 more)
tests/: conftest.py  test_ablation.py  test_advisory_payloads.py  test_agent_control.py  test_agentic_retrieval.py  test_appconfig_template.py  test_architecture_infographic.py  test_archive_hitl.py  test_asha_monitor.py  test_asset_brief.py  test_assistant_endpoint.py  test_assistant_mega_review.py  test_assistant_p2b.py  test_assistant_p3.py  test_assistant_p4.py  test_assistant_review_fixes.py  test_assistant_streaming.py  test_atomicio.py  test_attention.py  test_audit_fixes.py  test_authored_concepts.py  test_auto_install_deps.py  test_background_appendable.py  test_bench.py  test_best_of_n.py  test_build_recovery.py  test_card_concept_truth.py  test_card_driven_selection.py  test_card_enrichment_writers.py  test_card_operator_controls.py  test_card_public_projection.py  test_card_replay_bounds.py  test_card_scorer_fidelity_gate.py  test_card_selection_guard.py  test_card_selection_integration.py  test_card_selection_review_regressions.py  test_card_speculation_engine.py  test_card_speculative_selection.py  test_card_stage_1c.py  test_card_writer_lifecycle.py  (+252 more)
tools/: e2e_report.py  ui_preview.py  ui_with_env.py
ui/: index.html  package-lock.json  package.json  vite.config.js
(+330 files in other folders)
